--- a/client/movies/movies.html
+++ b/client/movies/movies.html
@@ -1,5 +1,5 @@
 <div id='moviesContainer' ng-controller='MoviesController'>
-  <h1>Showtimes</h1>
+  <h1>Theaters</h1>
   <div>
     <ul class='theaters'>
       <li class='theater' ng-repeat='theater in theaters'>
