(feat) implemented main view

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,10 +1,13 @@
 <div id='container'>
   <div class='searchBar'>
-    <form name='mainSearchBar' ng-submit='storeInputInFactory' novalidate>
+    <form name='mainSearchBar' ng-submit='renderPage()' novalidate>
       <input name='searchText' type='text' ng-model='input' placeholder='Enter your search here!'/>
     </form>
-  </div>
-  <div class='firstView' ui-view></div>
-  <div class='secondView' ui-view></div>
+
+
+
+  <div ui-view></div>
+
+
 </div>
 
