--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,11 @@
   <meta charset="utf-8" />
   <title>Nite-Out</title>
 <!--   <link rel="stylesheet" type="text/css" href="styles/style.css" /> -->
+  <style type="text/css">
+  div {
+    border: 1px solid black;
+  }
+  </style>
 </head>
 <body ng-app='nite-out'>
   <h1>Nite-Out</h1>
@@ -16,6 +21,7 @@
   <script src="app/bower_components/angular/angular.js"></script>
   <script src="app/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="app/main/main.js"></script>
+  <script src="app/main/test.js"></script>
   <script src="app/app.js"></script>
 </body>
 </html>
