--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,8 @@
 
   <script src="app/bower_components/angular/angular.js"></script>
   <script src="app/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="app/movies/movies.js"></script>
+  <script src="app/movies/services.js"></script>
   <script src="app/main/main.js"></script>
   <script src="app/main/test.js"></script>
   <script src="app/app.js"></script>
