--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,10 @@
 
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?libraries=places&sensor=true"></script>
+  <script src="bower_components/lodash/dist/lodash.min.js"></script>
+  <script src="bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
+  <script src="app/map/map.js"></script>
   <script src="app/movies/movies.js"></script>
   <script src="app/movies/services.js"></script>
   <script src="app/main/main.js"></script>
