--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,8 @@
 
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="app/events/events.js"></script>
+  <script src="app/events/services.js"></script>
   <script src="app/movies/movies.js"></script>
   <script src="app/movies/services.js"></script>
   <script src="app/main/main.js"></script>
