(feat) updated index.html

--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,8 @@
   <script src="app/map/services.js"></script>
   <script src="app/events/events.js"></script>
   <script src="app/events/services.js"></script>
+  <script src="app/restaurants/restaurants.js"></script>
+  <script src="app/restaurants/services.js"></script>
   <script src="app/movies/movies.js"></script>
   <script src="app/movies/services.js"></script>
   <script src="app/main/main.js"></script>
