--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,6 +2,7 @@
   <div class='searchBar'>
     <a ui-sref="main.movies">Movies</a>
     <a ui-sref="main.events">Events</a>
+    <a ui-sref="main.restaurants">Restaurants</a>
     <form name='mainSearchBar' ng-submit='renderPage()' novalidate>
       <input name='searchText' type='text' ng-model='input' placeholder='Enter your search here!'/>
     </form>
