--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
   <script src="bower_components/lodash/dist/lodash.min.js"></script>
   <script src="bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
   <script src="app/map/map.js"></script>
+  <script src="app/map/services.js"></script>
   <script src="app/movies/movies.js"></script>
   <script src="app/movies/services.js"></script>
   <script src="app/main/main.js"></script>
