--- a/client/index.html
+++ b/client/index.html
@@ -10,8 +10,11 @@
 
 
   <div ui-view></div>
+  <!-- distribution requirements -->
+  <script src="dist/build.js"></script>
 
-  <script src="bower_components/angular/angular.js"></script>
+  <!-- development requirements -->
+  <!-- <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="app/events/events.js"></script>
   <script src="app/events/services.js"></script>
@@ -20,6 +23,6 @@
   <script src="app/movies/movies.js"></script>
   <script src="app/movies/services.js"></script>
   <script src="app/main/main.js"></script>
-  <script src="app/app.js"></script>
+  <script src="app/app.js"></script> -->
 </body>
 </html>
