--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -3,15 +3,17 @@
   <style>
     .angular-google-map-container { height: 400px; width: 400px; }
     .item-text { color: blue; cursor: pointer; }
+    #google-map div { border-style: none;  }
   </style>
 
-  <google-map id='google-map' center="map.center" zoom="map.zoom"></google-map>
+  <google-map id='google-map' center="map.center" zoom="map.zoom" control='map.control' options='map.options' events='map.events'></google-map>
 
+  <!-- a list of locations mapController renders using Mapper Factory. It was used for testing.  -->
   <div class='.map-list'>
     <div class='.map-list-item' ng-repeat='place in places'>
       <div class='.info-item'>
-        <div class='.title-item'><span>{{ place.title }}</span></div>
-        <div ng-click='setCenter(place.address)' class='.address-item'><span class='item-text'>{{ place.address }}</span></div>
+        <div class='.title-item'><span>{{ place.name }}</span></div>
+        <div ng-click='setCenter(place.vicinity)' class='.address-item'><span class='item-text'>{{ place.vicinity }}</span></div>
       </div>
     </div>
   </div>
