(feat) html list item links to location in factory and visually on map

--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -13,7 +13,7 @@
     <div class='.map-list-item' ng-repeat='place in places'>
       <div class='.info-item'>
         <div class='.title-item'><span>{{ place.name }}</span></div>
-        <div ng-click='setCenter(place.vicinity)' class='.address-item'><span class='item-text'>{{ place.vicinity }}</span></div>
+        <div ng-click='select(place)' class='.address-item'><span class='item-text'>{{ place.vicinity }}</span></div>
       </div>
     </div>
   </div>
