--- a/client/index.html
+++ b/client/index.html
@@ -11,10 +11,10 @@
 
   <div ui-view></div>
   <!-- distribution requirements -->
-  <script src="dist/build.js"></script>
+  <!-- <script src="dist/build.js"></script> -->
 
   <!-- development requirements -->
-  <!-- <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places&sensor=true"></script>
   <script src="bower_components/lodash/dist/lodash.min.js"></script>
@@ -28,6 +28,6 @@
   <script src="app/movies/movies.js"></script>
   <script src="app/movies/services.js"></script>
   <script src="app/main/main.js"></script>
-  <script src="app/app.js"></script> -->
+  <script src="app/app.js"></script>
 </body>
 </html>
