(feat/style) installed icecream grid system

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Nite-Out</title>
-<!--   <link rel="stylesheet" type="text/css" href="styles/style.css" /> -->
+  <link rel="stylesheet" type="text/css" href="styles/style.css" />
 </head>
 <body ng-app='nite-out'>
   <h1>Nite-Out</h1>
