--- a/client/app/restaurants/restaurants.html
+++ b/client/app/restaurants/restaurants.html
@@ -1,11 +1,9 @@
-<h1>Restaurants</h1>
-<div>
-  <div class="restaurants" ng-repeat="restaurant in restaurants">
-    <div class="restaurant">
-      <div ng-click="getInfo()">{{restaurant.name}}</div>
-      <div>Phone Number: {{restaurant.phone}}</div>
-      <div>Address: {{restaurant.address}}, {{restaurant.city}}, {{restaurant.postal_code}} </div>
-    </div>
-  </div>
+<h3>Restaurants</h3>
+<div class="event" ng-repeat="restaurant in restaurants">
+  <a href=""><img class="logo" src="assets/yelp.png" /></a>
+  <a href=""><img class="logo" src="assets/opentable.png" /></a>
+  <span class="title" ng-click="getInfo()">{{restaurant.name}}</span></br>
+  <span class="phone">Phone: {{restaurant.phone}}</span></br>
+  <span class="address">Address: {{restaurant.address}}, {{restaurant.city}}, {{restaurant.postal_code}} </span>
 </div>
 
