--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -4,7 +4,7 @@
     <a ui-sref="main.events">Events</a>
     <a ui-sref="main.restaurants">Restaurants</a>
     <form ng-submit="renderPage()" novalidate>
-      <input class="search-box" type="text" ng-model="input" placeholder="Enter your search here!"/>
+      <input class="search-box" type="text" ng-model="input" autofocus/>
     </form>
   </div>
   <div ui-view></div>
