--- a/client/app/movies/movies.html
+++ b/client/app/movies/movies.html
@@ -1,8 +1,8 @@
-<div id='moviesContainer'>
+<div iud='moviesContainer'>
   <h1>Theaters</h1>
   <div>
     <ul class='theaters'>
-      <li class='theater' ng-repeat='theater in theaters'>
+      <li class='theater' ng-repeat='theater in theaters' ng-click='toShowtimes()'>
         {{theater.name}}
       </li>
     </ul>
