--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="styles/style.css" />
   <link rel="stylesheet" type="text/css" href="styles/icecream-grid.css" />
 </head>
-<body class="i-container" ng-app='nite-out'>
+<body ng-app='nite-out'>
   <h1>Nite-Out</h1>
 
   <div class="i-g">
