(feat) updated map files to begin integration

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -3,6 +3,7 @@
     <a ui-sref="main.movies">Movies</a>
     <a ui-sref="main.events">Events</a>
     <a ui-sref="main.restaurants">Restaurants</a>
+    <a ui-sref="main.map">Map</a>
     <form ng-submit="renderPage()" novalidate>
       <input class="search-box" type="text" ng-model="input" autofocus/>
     </form>
