--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -15,7 +15,7 @@
   </style>
   
   <center>
-    <google-map id='google-map' center="map.center" zoom="map.zoom" control='map.control' options='map.options' events='map.events'></google-map>
+    <google-map id="google-map" center="map.center" zoom="map.zoom" control="map.control" options="map.options" events="map.events"></google-map>
   </center>
   <!-- a list of locations mapController renders using Mapper Factory. It was used for testing.  -->
   <div class="map-list">
