--- a/client/app/events/events.html
+++ b/client/app/events/events.html
@@ -1,6 +1,7 @@
 <h3>Events</h3>
   <center>
     <google-map id="google-map" center="map.center" zoom="map.zoom" control="map.control" options="map.options" events="map.events"></google-map>
+    <markers models="restaurants" fit="true" coords=""
   </center>
 <div class="event" ng-repeat="event in events">
   <div ng-click="setCenter(event)">
