--- a/client/index.html
+++ b/client/index.html
@@ -29,5 +29,6 @@
   <script src="app/movies/services.js"></script>
   <script src="app/main/main.js"></script>
   <script src="app/app.js"></script>
+  <script src="app/movies/showtimes.js"></script>
 </body>
 </html>
