--- a/client/app/events/events.html
+++ b/client/app/events/events.html
@@ -1,7 +1,7 @@
 <h3>Events</h3>
   <center>
     <google-map id="google-map" center="map.center" zoom="map.zoom" control="map.control" options="map.options" events="map.events">
-      <markers models="events" coords="'self'" fit="'true'"></markers>
+      <markers models="events" coords="'self'" fit="'true'" icon="'icon'"></markers>
     </google-map>
   </center>
 <div class="event" ng-repeat="event in events">
