(feat) updated styles for movies and buyTickets

--- a/client/app/movies/buyTicket.html
+++ b/client/app/movies/buyTicket.html
@@ -1,6 +1,6 @@
-<div id='buyTicketContainer'>
-  <h1>Movies</h1>
-  <div>
-    Thanks!
+<h3>Movies</h3>
+  <div class="event">
+    <span class="title">
+      2 Tickets for {{movie.name}} @ {{time}} have been added to your cart!
+    </span>
   </div>
-</div>
