--- a/client/app/movies/movies.html
+++ b/client/app/movies/movies.html
@@ -4,6 +4,6 @@
   </google-map>
 <div class="event" ng-repeat="theater in theaters" ng-click="toShowtimes(theater)">
   <span class="title">{{theater.name}}</span></br>
-  <div>{{theater.phoneNumber}}</div>
-  <div>{{theater.address}}</div>
+  <div>Phone: {{theater.phoneNumber}}</div>
+  <div>Address: {{theater.address}}</div>
 </div>
