--- a/client/app/movies/showtimes.html
+++ b/client/app/movies/showtimes.html
@@ -1,15 +1,7 @@
-<div id='showtimesContainer'>
-  <h1>Movies</h1>
-  <div>
-    <ul class='showtimes'>
-      <li class='showtime' ng-repeat='movie in moviesStuff'>
-        {{movie.name}}
-          <ul>
-            <li ng-repeat='showtime in movie.showtimes' ng-click='buyTicket(showtime)'>
-              {{showtime}}
-            </li>
-          <ul>
-      </li>
-    </ul>
-  </div>
+<h3>Showtimes</h3>
+<div class="event" ng-repeat="movie in moviesStuff">
+  <div class="title">{{movie.name}}</div>
+    <span ng-repeat="showtime in movie.showtimes" ng-click="buyTicket(movie, showtime)">
+      {{showtime}}
+    </span>
 </div>
