--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
 </head>
 <body ng-app='nite-out'>
   <h1>Nite-Out</h1>
-  <div signedin></div>
+  <div class="loggedin" loggedin></div>
 
   <div class="i-g">
     <div class="i-2"></div>
