injected nite-out.auth and auth.js script

--- a/client/app/auth/needLogin.html
+++ b/client/app/auth/needLogin.html
@@ -1,2 +1,4 @@
-<button class="loginButton">login</button>
-<button class="signupButton">sign up</button>
+<div>
+  <button class="loginButton">login</button>
+  <button class="signupButton">sign up</button>
+</div>
