--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
 <body ng-app='nite-out'>
   <h1>Nite-Out</h1>
   <div class="loggedin" loggedin></div>
+  <div class="needlogin" needlogin></div>
 
   <div class="i-g">
     <div class="i-2"></div>
@@ -30,6 +31,8 @@
 
   <script src="bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
 
+
+  <script src="app/auth/auth.js"></script>
   <script src="app/map/map.js"></script>
   <script src="app/map/services.js"></script>
   <script src="app/events/events.js"></script>
