--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
 <body ng-app='nite-out'>
   <h1>Nite-Out</h1>
   <div class="loggedin" loggedin></div>
-  <div class="needlogin" needlogin></div>
+  <div class="needlogin" ng-controller='AuthController' needlogin></div>
 
   <div class="i-g">
     <div class="i-2"></div>
