--- a/client/app/auth/needlogin.tpl.html
+++ b/client/app/auth/needlogin.tpl.html
@@ -1,5 +1,4 @@
 <div>
-  <button class="loginButton">login</button>
-  <button class="signupButton">sign up</button>
+  <button class="loginButton" ng-click="loginpage()">login</button>
+  <button class="signupButton" ng-click="signupPage()">sign up</button>
 </div>
-
