--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,7 @@
 
 
   <script src="app/auth/auth.js"></script>
+  <script src="app/auth/authServices.js"></script>
   <script src="app/map/map.js"></script>
   <script src="app/map/services.js"></script>
   <script src="app/events/events.js"></script>
