--- a/client/app/auth/loginPage.html
+++ b/client/app/auth/loginPage.html
@@ -1,7 +1,7 @@
 <div class="loginPage">
 Login Page
   <form>
-    Username: <input type="text"><br>
-    Password: <input type="password">
+    Username: <input type="text" ng-model="userInfo.userEmail"><br>
+    Password: <input type="password" ng-model="userInfo.password">
   </form>
 </div>
