--- a/client/app/auth/loginPage.html
+++ b/client/app/auth/loginPage.html
@@ -1,6 +1,6 @@
 <div class="loginPage">
 Login Page
-  <form>
+  <form ng-submit="">
     Username: <input type="text" ng-model="userInfo.userEmail"><br>
     Password: <input type="password" ng-model="userInfo.password">
   </form>
