--- a/client/app/auth/loginPage.html
+++ b/client/app/auth/loginPage.html
@@ -1,7 +1,7 @@
 <div class="loginPage">
 Login Page
   <form ng-submit="sendData(userInfo)">
-    Username: <input type="text" ng-model="userInfo.userEmail"><br>
+    Username: <input type="email" ng-model="userInfo.userEmail"><br>
     Password: <input type="password" ng-model="userInfo.password">
   </form>
 </div>
