(bug) eliminated duplicated in post

--- a/client/app/auth/loginPage.html
+++ b/client/app/auth/loginPage.html
@@ -3,5 +3,6 @@ Login Page
   <form ng-submit="sendData(userInfo)">
     Username: <input type="email" ng-model="userInfo.userEmail"><br>
     Password: <input type="password" ng-model="userInfo.password">
+    <input style="visibility:hidden" type="submit">
   </form>
 </div>
