(feat) created get request on login

--- a/client/app/auth/loginPage.html
+++ b/client/app/auth/loginPage.html
@@ -1,6 +1,6 @@
 <div class="loginPage">
 Login Page
-  <form ng-submit="sendData(userInfo)">
+  <form ng-submit="getLoginData(userInfo)">
     Username: <input type="email" ng-model="userInfo.userEmail"><br>
     Password: <input type="password" ng-model="userInfo.password">
     <input style="visibility:hidden" type="submit">
