--- a/client/app/auth/signupPage.html
+++ b/client/app/auth/signupPage.html
@@ -1,6 +1,6 @@
 <div class="signupPage">
 Signup Page
-  <form ng-submit="sendData(userInfo)">
+  <form ng-submit="postSignupData(userInfo)">
     Username: <input type="email" ng-model="userInfo.email"><br>
     Password: <input type="password" ng-model="userInfo.password">
     <input style="visibility:hidden" type="submit">
