--- a/client/app/auth/loginPage.html
+++ b/client/app/auth/loginPage.html
@@ -1,7 +1,7 @@
 <div class="loginPage">
 Login Page
   <form ng-submit="getLoginData(userInfo)">
-    Username: <input type="email" ng-model="userInfo.userEmail"><br>
+    Username: <input type="email" ng-model="userInfo.email"><br>
     Password: <input type="password" ng-model="userInfo.password">
     <input style="visibility:hidden" type="submit">
   </form>
