(bug) tested auth logic in app

--- a/client/index.html
+++ b/client/index.html
@@ -9,14 +9,15 @@
 </head>
 <body ng-app='nite-out'>
   <h1>Nite-Out</h1>
-  <div class="loggedin" loggedin></div>
-  <div class="needlogin" ng-controller='AuthController' needlogin></div>
+  <div ng-if="loggedin" class="loggedin" loggedin></div>
+  <div ng-if="!loggedin" class="needlogin" ng-controller='AuthController' needlogin></div>
 
   <div class="i-g">
     <div class="i-2"></div>
     <div class="i-8" ui-view></div>
     <div class="i-2"></div>
   </div>
+
   <!-- distribution requirements -->
   <!-- <script src="dist/build.js"></script> -->
 
