--- a/client/app/restaurants/restaurants.html
+++ b/client/app/restaurants/restaurants.html
@@ -1,14 +1,14 @@
 <h3>Restaurants</h3>
   <center>
     <google-map id="google-map" center="map.center" zoom="map.zoom" control="map.control" options="map.options" events="map.events">
-      <markers ng-if="resolved" models="restaurants" coords="'coords'" fit="'true'"></markers>
+      <markers ng-if="restaurants.fetched" models="restaurants.restaurants" coords="'coords'" fit="'true'"></markers>
     </google-map>
   </center>
-  <span ng-click="resolved = !resolved">{{resolved}}</span>
-<div class="event" ng-repeat="restaurant in restaurants">
+  <button ng-click="restaurants.fetched = !restaurants.fetched">{{restaurants.fetched}}</button>
+<div class="event" ng-repeat="restaurant in restaurants.restaurants">
   <div ng-click="setCenter(restaurant)">
     <a href="{{restaurant.url}}"><img class="logo" src="assets/opentable.png" /></a>
-    <span class="title" ng-click="getInfo()">{{restaurant.name}}</span></br>
+    <span class="title" ng-click="setCenter()">{{restaurant.name}}</span></br>
     <span class="phone">Phone: {{restaurant.phone}}</span></br>
     <span class="address">Address: {{restaurant.address}}</span></br>
     <span>{{restaurant.coords}}</span></br> 
