(feat) updated client files

--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places&sensor=true"></script>
   <script src="bower_components/lodash/dist/lodash.min.js"></script>
   <script src="bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
-
+  <script src="bower_components/angular-morph/dist/angular-morph.js"></script>
 
   <script src="app/auth/auth.js"></script>
   <script src="app/auth/authServices.js"></script>
