--- a/client/index.html
+++ b/client/index.html
@@ -45,6 +45,7 @@
   <script src="app/movies/services.js"></script>
   <script src="app/movies/buyTicket.js"></script>
   <script src="app/main/main.js"></script>
+  <script src="app/main/services.js"></script>
   <script src="app/app.js"></script>
 
   <script src="app/movies/showtimes.js"></script>
