--- a/client/app/auth/loginPage.html
+++ b/client/app/auth/loginPage.html
@@ -1,8 +1,8 @@
 <div class="loginPage">
   Login Page
   <form ng-submit="getLoginData(userInfo)">
-    Username: <input type="email" ng-model="userInfo.email"><br>
-    Password: <input type="password" ng-model="userInfo.password">
+    Email: <input type="email" ng-model="userInfo.email" required><br>
+    Password: <input type="password" ng-model="userInfo.password" required>
     <input style="visibility:hidden" type="submit">
   </form>
 </div>
