added semi-complete shopping cart feature.

--- a/client/app/movies/buyTicket.html
+++ b/client/app/movies/buyTicket.html
@@ -1,6 +1,8 @@
 <h3>Movies</h3>
   <div class="event">
-    <span class="title">
-      2 Tickets for {{movie.name}} @ {{time}} have been added to your cart!
-    </span>
+    <div class="title">
+      How many tickets for {{movie.name}} @ {{time}}?
+      
+    </div>
+    <button class="checkCart" ng-click="toCart()">Check cart</button>
   </div>
