--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,10 @@
     <div class="i-2"></div>
   </div>
 
+  <!-- <span> to be added to main page later
+    <niteOutCart></niteOutCart>
+  </span> -->
+
   <!-- distribution requirements -->
   <!-- <script src="dist/build.js"></script> -->
 
@@ -43,6 +47,7 @@
   <script src="app/movies/movies.js"></script>
   <script src="app/movies/services.js"></script>
   <script src="app/movies/buyTicket.js"></script>
+  <script src="app/cart/cart.js"></script>
   <script src="app/main/main.js"></script>
   <script src="app/main/services.js"></script>
   <script src="app/app.js"></script>
