--- a/client/index.html
+++ b/client/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Nite-Out</title>
-  <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
+  <title>NiteOut</title>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Montserrat+Alternates' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="styles/style.css" />
   <link rel="stylesheet" type="text/css" href="styles/icecream-grid.css" />
 </head>
 <body ng-app='nite-out'>
-  <h1>Nite-Out</h1>
+  <h1>NiteOut</h1>
 
   <!-- NG-IF not updating when the $scope.loginStatus is updated -->
   <div class="user-status" ng-controller="AuthController">
