(feat) Added link to main page on site title

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="styles/icecream-grid.css" />
 </head>
 <body ng-app='nite-out'>
-  <h1>NiteOut</h1>
+  <h1 ui-sref="main">NiteOut</h1>
 
   <!-- NG-IF not updating when the $scope.loginStatus is updated -->
   <div class="user-status" ng-controller="AuthController">
