--- a/client/app/events/events.html
+++ b/client/app/events/events.html
@@ -11,5 +11,8 @@
     <span class="time">{{event.date}}</span></br>
     <div>{{event.venue}}</div>
     <div>{{event.address}}</div>
+    <span>
+      <button class="bookIt" ng-click="bookIt(event)">Book Tickets</button>
+    </span>
   </div>
 </div>
