--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,7 +1,7 @@
 <div id="container">
   <div class="search-bar">
     <form ng-submit="conductSearch(input, type)" novalidate>
-      <input class="search-box" type="text" ng-model="input" required autofocus/>
+      <input class="search-box" type="text" ng-model="input" required autofocus placeholder="Enter Zipcode"/>
       <select class="select-box" ng-model="type" required>
         <option value="movies" default>Movies</option>
         <option value="music">Concerts</option>
