--- a/client/app/cart/cart.html
+++ b/client/app/cart/cart.html
@@ -2,7 +2,9 @@
   <h3>Cart</h3>
     <div class="cart">
       <div class="title" ng-repeat="item in stuffInCart">
-      {{item.numTickets}} tickets for: {{item.event}} @ {{item.time}}
+      {{item.numTickets}} tickets for:
+      <br/>
+       {{item.event}} @ {{item.time}}
       </div>
     </div>
     <div class="title">
