--- a/client/index.html
+++ b/client/index.html
@@ -42,6 +42,7 @@
   <script src="app/map/services.js"></script>
   <script src="app/events/events.js"></script>
   <script src="app/events/services.js"></script>
+  <script src="app/events/buyEventTicket.js"></script>
   <script src="app/restaurants/restaurants.js"></script>
   <script src="app/restaurants/services.js"></script>
   <script src="app/movies/movies.js"></script>
