(feat) style updates

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
   <link href='http://fonts.googleapis.com/css?family=Montserrat+Alternates' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="styles/style.css" />
   <link rel="stylesheet" type="text/css" href="styles/icecream-grid.css" />
+  <link src="bower_components/ngDialog/css/NgDialog.min.css" />
 </head>
 <body ng-app='nite-out'>
   <h1 ui-sref="main">NiteOut</h1>
@@ -37,6 +38,7 @@
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places&sensor=true"></script>
   <script src="bower_components/lodash/dist/lodash.min.js"></script>
+  <script src="bower_components/ngDialog/js/ngDialog.min.js"></script>
   <script src="bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
 
   <script src="app/auth/auth.js"></script>
