--- a/client/app/auth/needlogin.tpl.html
+++ b/client/app/auth/needlogin.tpl.html
@@ -1,4 +1,4 @@
 <div>
-  <button class="loginButton" ng-click="loginPage()">login</button>
-  <button class="signupButton" ng-click="signupPage()">sign up</button>
+  <a class="loginButton" ng-click="loginPage()">login</a>
+  <a class="signupButton" ng-click="signupPage()">sign up</a>
 </div>
