(feat) put shopping cart on the left

--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,9 @@
   </div>
 
   <div class="i-g">
-    <div class="i-2"></div>
+    <div class="i-2" ng-controller="cartController">
+      <cart></cart>
+    </div>
     <div class="i-8" ui-view></div>
     <div class="i-2"></div>
   </div>
