(feat) able to add events to cart

--- a/client/app/events/events.html
+++ b/client/app/events/events.html
@@ -12,7 +12,7 @@
     <div>{{event.venue}}</div>
     <div>{{event.address}}</div>
     <span>
-      <button class="bookIt" ng-click="bookIt(event)">Book Tickets</button>
+      <button class="bookIt" ng-click="bookIt(event.title, event.data, 2)">Book Tickets</button>
     </span>
   </div>
 </div>
