--- a/client/index.html
+++ b/client/index.html
@@ -40,6 +40,7 @@
 
   <script src="app/auth/auth.js"></script>
   <script src="app/auth/authServices.js"></script>
+  <script src="app/checkout/checkout.js"></script>
   <script src="app/map/map.js"></script>
   <script src="app/map/services.js"></script>
   <script src="app/events/events.js"></script>
