(refactor) adds readable timestamp to event listings

--- a/client/app/events/events.html
+++ b/client/app/events/events.html
@@ -5,10 +5,10 @@
     </google-map>
   </center>
 <div class="event" ng-repeat="event in events">
-  <div ng-click="setCenter(event)">
+  <div ng-click="setCenter(event)" ng-mouseover="do(event)">
     <a href="{{event.url}}"><img class="logo" src="assets/eventbrite.png" /></a>
     <span class="title">{{event.id}}. {{event.title}}</span></br>
-    <span class="time">{{event.date}}</span></br>
+    <span class="time">{{event.date | date:'medium'}}</span></br>
     <div>{{event.venue}}</div>
     <div>{{event.address}}</div>
     <a class="home-button" ng-click="bookIt(event.title, event.data, 2)">Book Tickets</a>
