(feat) changed continue shopping message

--- a/client/app/cart/cart.html
+++ b/client/app/cart/cart.html
@@ -4,4 +4,6 @@
     <div>{{item.event}}<span> #: {{item.numTickets}}</span></div>
     <span>{{item.time}}</span>
   </div>
+
+  <button>Edit Cart</button><button ng-click"checkout()">Checkout</button>
 </div>
