--- a/client/app/checkout/shopping.html
+++ b/client/app/checkout/shopping.html
@@ -1,6 +1,7 @@
 <div>
 
-  <h2>continue shopping</h2>
+  <h2>Feel free to continue shopping</h2>
+  <h4>Just pick another event!</h4>
   <a ui-sref="main.checkout">checkout</a>
 
 </div>
