(feat) added edit and checkout button in cart

--- a/client/app/cart/cart.html
+++ b/client/app/cart/cart.html
@@ -5,5 +5,5 @@
     <span>{{item.time}}</span>
   </div>
 
-  <button>Edit Cart</button><button ng-click"checkout()">Checkout</button>
+  <button>Edit Cart</button><button ng-click="checkout()">Checkout</button>
 </div>
